tests/NormalTests/paczka1/fuzzy1/52680620.err
Error in line 6: nySbibpe S176 97,8
Error in line 12: nySbibpe A838 24,7
Error in line 5: JKaFpuforG A873 89,5
Error in line 25: JKaFpuforG S176 43,0
Error in line 29: nySbibpe S176 97,4
